# energy-assistant

./: .gitignore  ARCHITECTURE.md  DOMAIN_MODEL.md  Dockerfile  README.md  RELEASE.md  ROADMAP.md  VISION.md  config.yaml.example  config_messkonzept8.yaml.example  pyproject.toml  secrets.yaml.example
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  release.yml  sync-hassio-addons.yml  tests.yml
docs/: hassio-addon-pr-files.md
example-data/: iobroker-tibber-prices.json
notebooks/: visualize_optimizer.ipynb
scripts/: _probe_optimizer_inputs.py  _probe_power_sensors.py  _probe_pvforecast.py  _probe_soc.py  _probe_values.py  control_storage.py  diagnostics_live.py  diagnostics_sim.py  probe_devices.py  probe_iobroker.py  run_controller.py  try_optimize.py  try_tibber.py  visualize_optimizer.py
src/energy_assistant/: __init__.py  __main__.py  secrets.py
src/energy_manager/: __init__.py  secrets.py
tests/: conftest.py  test_config_yaml.py  test_config_yaml_secrets.py  test_device_registry.py  test_event_bus.py  test_forecast_pass_through.py  test_models.py  test_optimizer_rule_based.py  test_plugin_home_power_iobroker.py  test_plugin_iobroker_device.py  test_plugin_milp_optimizer.py  test_plugin_mt175_ha.py  test_plugin_pvforecast_iobroker.py  test_plugin_sma_em_iobroker.py  test_plugin_sma_modbus_iobroker.py  test_plugin_tibber_iobroker_tariff.py  test_plugin_tibber_live_power_iobroker.py  test_plugin_zendure_iobroker.py  test_secrets.py  test_storage_sqlite.py  test_tariff_flat_rate.py
tests/energy_assistant/: test_event_bus.py  (+13 more)
(+109 files in other folders)
