[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-assistant"
version = "0.1.0"
description = "Open-source, vendor-neutral energy management platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pulp>=3.0",
    "highspy>=1.7",
    "fastapi>=0.115",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/energy_manager", "src/energy_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
